@@ -32,7 +32,7 @@ public class RegisterControllerBean {
 
     public void addShopUser() {
         DBShopUserControl shopUserControl = (DBShopUserControl) Database.getShopUserController();
-        ShopUser user = new ShopUser(new Long(0), registerBackingBean.getEmail(), 
+        ShopUser user = new ShopUser(Long.valueOf(0), registerBackingBean.getEmail(), 
                 registerBackingBean.getName(), registerBackingBean.getPasswd(), 
                 registerBackingBean.getStreet(), registerBackingBean.getCity(), 
                 registerBackingBean.getCountry(), false);
